--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,3 +36,26 @@ jobs:
       - name: Show Current Time
         run: echo "CurrentTime=${{steps.current-time.outputs.formattedTime}}" # (2)
         shell: bash
+        
+        
+        # Spring
+      # - name: Generate deployment package
+      #   run: |
+      #     mkdir -p deploy
+      #     cp build/libs/*.jar deploy/application.jar
+      #     cp Procfile deploy/Procfile
+      #     cp -r .ebextensions deploy/.ebextensions
+      #     cp -r .platform deploy/.platform
+      #     cd deploy && zip -r deploy.zip .
+
+- name: Beanstalk Deploy
+        uses: einaregilsson/beanstalk-deploy@v20
+        with:
+          aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }} # 액세스 키
+          aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }} # 시크릿 키
+          application_name: CMC_ServerStudy # 빈스톡 어플리케이션 이름
+          environment_name: Cmcserverstudy-env-1 # 빈스톡 어플리케이션 환경 이름
+          version_label: github-action-${{steps.current-time.outputs.formattedTime}}
+          region: ap-northeast-2 # AWS 리전
+          deployment_package: deploy.zip # 코드 압축 파일
+          wait_for_environment_recovery: 300
