--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,14 +39,14 @@ jobs:
         
         
         # Spring
-      # - name: Generate deployment package
-      #   run: |
-      #     mkdir -p deploy
-      #     cp build/libs/*.jar deploy/application.jar
-      #     cp Procfile deploy/Procfile
-      #     cp -r .ebextensions deploy/.ebextensions
-      #     cp -r .platform deploy/.platform
-      #     cd deploy && zip -r deploy.zip .
+       - name: Generate deployment package
+         run: |
+           mkdir -p deploy
+           cp build/libs/*.jar deploy/application.jar
+           cp Procfile deploy/Procfile
+           cp -r .ebextensions deploy/.ebextensions
+           cp -r .platform deploy/.platform
+           cd deploy && zip -r deploy.zip .
 
 - name: Beanstalk Deploy
         uses: einaregilsson/beanstalk-deploy@v20
