--- a/.platform/Nginx.conf
+++ b/.platform/Nginx.conf
@@ -24,7 +24,7 @@ http {
       default     "upgrade";
   }
 
-  upstream nodejs {
+  upstream springboot {
     server 127.0.0.1:8080;
     keepalive 1024;
   }
